--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="/assets/css/Kaushan%20Script.css?h=b8ea2be13bd7a4ab865e02ab389530f6">
     <link rel="stylesheet" href="/assets/css/Montserrat.css?h=6e423cec21a6c6963c497406c82a8152">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" 
+      type="image/png" 
+      href="./81029510.png">
 </head>
 
 <body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="54">
