--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - MuhammedSka</title>
     <meta name="description" content="MuhammedSka">
+    <meta name="keywords" content="Muhammed Şaban kara, muhammedska, yazılım, tıp, medicine, developer, php developer, geliştirici, freelancer, proje geliştirici, ekip lideri, team manager, sportsman, trainer, karate, muhammed, şaban, Kara, dev, frontend, backend, python,">
+    <meta name="author" content="Çözelti Software">
+    <meta name="designer" content="Çözelti Software">
     <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css?h=46feb92613af999ebbefe88000b85e61">
     <link rel="stylesheet" href="/assets/css/Kaushan%20Script.css?h=b8ea2be13bd7a4ab865e02ab389530f6">
     <link rel="stylesheet" href="/assets/css/Montserrat.css?h=6e423cec21a6c6963c497406c82a8152">
