--- a/x24.html
+++ b/x24.html
@@ -54,7 +54,7 @@
                 </tbody>
             </table>
         </section>
-        <section>
+        <section style="width:%100;overflow-x:scroll;">
             <h2>Beslenme ve PMS Yönetimi</h2>
             <table class="table table-striped">
                 <thead class="table-primary">
