--- a/mcasal.html
+++ b/mcasal.html
@@ -80,7 +80,7 @@
     </style>
 </head>
 <body>
-    <div id="overlay">
+    <div class="m-1" id="overlay">
         <h1 class="animate__animated animate__flash">🚀 3D Cyberpunk Asal Sayı Testi</h1>
         <p>Bir sayı gir ve sonucu 3D animasyonla gör!</p>
         <div class="input-group">
