--- a/tested.html
+++ b/tested.html
@@ -132,6 +132,155 @@
       <p class="text-sm">&copy; 2025 Testosteron Artırıcı Program. Tüm hakları saklıdır.</p>
     </div>
   </footer>
-  
+  <!-- Header -->
+  <header class="bg-pink-600 text-white py-4 shadow">
+    <div class="container mx-auto px-4 flex flex-col md:flex-row justify-between items-center">
+      <h1 class="text-2xl font-bold">Kadın Sağlığı Denge Programı</h1>
+      <nav class="mt-2 md:mt-0">
+        <ul class="flex space-x-4">
+          <li><a href="#egzersiz" class="hover:underline">Egzersiz Programı</a></li>
+          <li><a href="#beslenme" class="hover:underline">Beslenme Programı</a></li>
+          <li><a href="#besin-etkileri" class="hover:underline">Besin Etkileri</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <!-- Hero Section -->
+  <section class="bg-white py-10">
+    <div class="container mx-auto px-4 text-center">
+      <h2 class="text-3xl font-bold mb-4">Evde Uygulanabilir Egzersiz ve Beslenme Programı</h2>
+      <p class="text-lg mb-6">Bu program, evdeki basit aletlerle adet ağrıları, sırt ve baş ağrılarınızı hafifletmeye, genel kadın sağlığınızı dengelemeye yönelik egzersiz ve beslenme önerilerini içermektedir.</p>
+    </div>
+  </section>
+
+  <!-- Egzersiz Programı Section -->
+  <section id="egzersiz" class="bg-gray-100 py-10">
+    <div class="container mx-auto px-4">
+      <h3 class="text-2xl font-bold mb-4 text-center">Egzersiz Programı</h3>
+      <p class="mb-6 text-center">Evde kolaylıkla uygulayabileceğiniz egzersizlerle kas gerginliğini azaltın, esnekliği artırın ve kan dolaşımını iyileştirin.</p>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+        <!-- Yoga ve Esneme -->
+        <div class="bg-white p-6 rounded-lg shadow">
+          <h4 class="text-xl font-semibold mb-3">Yoga & Esneme</h4>
+          <ul class="list-disc ml-5 space-y-1">
+            <li>20 dk temel yoga (katılımcı pozları, çocuk pozu, köprü pozu)</li>
+            <li>10 dk derin esneme (sırt, boyun ve omuz odaklı)</li>
+            <li>Nefes egzersizleri (5 dk)</li>
+          </ul>
+        </div>
+        <!-- Pelvik Taban ve Karın Egzersizleri -->
+        <div class="bg-white p-6 rounded-lg shadow">
+          <h4 class="text-xl font-semibold mb-3">Pelvik Taban & Karın Egzersizleri</h4>
+          <ul class="list-disc ml-5 space-y-1">
+            <li>Kegel egzersizleri: 3 set x 10 tekrar (her set arası 30 sn dinlenme)</li>
+            <li>Plank: 3 set x 45 sn</li>
+            <li>Yan plank: Her iki taraf için 2 set x 30 sn</li>
+          </ul>
+        </div>
+        <!-- Kardiyo & Denge -->
+        <div class="bg-white p-6 rounded-lg shadow md:col-span-2">
+          <h4 class="text-xl font-semibold mb-3">Kardiyo & Denge</h4>
+          <ul class="list-disc ml-5 space-y-1">
+            <li>5 dk ip atlama veya yerinde koşu (ısınma)</li>
+            <li>Denge egzersizleri (tek ayak üzerinde durma, 3 set x 30 sn her ayak)</li>
+            <li>Gevşeme ve meditasyon (10 dk)</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Beslenme Programı Section -->
+  <section id="beslenme" class="py-10">
+    <div class="container mx-auto px-4">
+      <h3 class="text-2xl font-bold mb-4 text-center">Beslenme Programı</h3>
+      <p class="mb-6 text-center">Dengeli beslenme, hormonlarınızın sağlıklı çalışması ve ağrıları azaltmada kritik rol oynar.</p>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+        <!-- Örnek Günlük Menü -->
+        <div class="bg-white p-6 rounded-lg shadow">
+          <h4 class="text-xl font-semibold mb-3">Örnek Günlük Menü</h4>
+          <ul class="list-disc ml-5 space-y-1">
+            <li><strong>Kahvaltı:</strong> Yulaf ezmesi, yoğurt, taze meyve, badem/fındık</li>
+            <li><strong>Ara Öğün:</strong> Taze sebze dilimleri, humus</li>
+            <li><strong>Öğle:</strong> Izgara tavuk veya balık, tam tahıllı ekmek, bol salata (zeytinyağlı)</li>
+            <li><strong>Ara Öğün:</strong> Meyve veya avokado</li>
+            <li><strong>Akşam:</strong> Baklagiller veya mercimek çorbası, buharda pişmiş sebzeler, kinoa veya kahverengi pirinç</li>
+          </ul>
+        </div>
+        <!-- Takviyeler & Öneriler -->
+        <div class="bg-white p-6 rounded-lg shadow">
+          <h4 class="text-xl font-semibold mb-3">Önerilen Takviyeler & Besin Destekleri</h4>
+          <ul class="list-disc ml-5 space-y-1">
+            <li>Omega-3 yağ asitleri: Somon, ceviz, keten tohumu</li>
+            <li>Çinko: Kabak çekirdeği, deniz ürünleri, kırmızı et</li>
+            <li>Vitamin D: Güneş ışığı, yağlı balık; gerekirse takviye</li>
+            <li>Magnezyum: Yeşil yapraklı sebzeler, kuruyemişler, tam tahıllar</li>
+            <li>B vitaminleri: Tavuk, yumurta, süt ürünleri, baklagiller</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Besin Etkileri Tablosu Section -->
+  <section id="besin-etkileri" class="bg-gray-100 py-10">
+    <div class="container mx-auto px-4">
+      <h3 class="text-2xl font-bold mb-4 text-center">Besinlerin Kadın Sağlığına Etkileri</h3>
+      <p class="mb-6 text-center">Aşağıdaki tabloda, tükettiğiniz besinlerin kadın sağlığı üzerindeki olumlu veya olumsuz etkileri özetlenmiştir.</p>
+      <div class="overflow-x-auto">
+        <table class="min-w-full bg-white border border-gray-200">
+          <thead>
+            <tr class="bg-pink-500 text-white">
+              <th class="py-2 px-4 border">Besin</th>
+              <th class="py-2 px-4 border">Testosteron/Hormon Dengesine Etki</th>
+              <th class="py-2 px-4 border">Kadın Sağlığı Üzerinde Etki</th>
+            </tr>
+          </thead>
+          <tbody class="text-gray-700">
+            <tr>
+              <td class="py-2 px-4 border">Avokado & Zeytinyağı</td>
+              <td class="py-2 px-4 border">Artırıcı (sağlıklı yağlar hormon sentezini destekler)</td>
+              <td class="py-2 px-4 border">Dengeleyici, anti-inflamatuar</td>
+            </tr>
+            <tr class="bg-gray-50">
+              <td class="py-2 px-4 border">Yumurta, Tavuk, Balık</td>
+              <td class="py-2 px-4 border">Artırıcı (protein desteği ve amino asit profili)</td>
+              <td class="py-2 px-4 border">Kas ve kemik sağlığını destekler</td>
+            </tr>
+            <tr>
+              <td class="py-2 px-4 border">İşlenmiş Şeker & Fast Food</td>
+              <td class="py-2 px-4 border">Azaltıcı (iltihaplanmaya yol açar)</td>
+              <td class="py-2 px-4 border">Adet ağrılarını, sırt ve baş ağrılarını artırabilir</td>
+            </tr>
+            <tr class="bg-gray-50">
+              <td class="py-2 px-4 border">Alkollü İçecekler</td>
+              <td class="py-2 px-4 border">Azaltıcı (hormon dengesini bozabilir)</td>
+              <td class="py-2 px-4 border">Kronik ağrı ve hormonal dengesizliklere yol açar</td>
+            </tr>
+            <tr>
+              <td class="py-2 px-4 border">Yeşil Sebzeler & Meyveler</td>
+              <td class="py-2 px-4 border">Artırıcı (antioksidan ve anti-inflamatuar)</td>
+              <td class="py-2 px-4 border">Ağrıları hafifletir, genel sağlığı destekler</td>
+            </tr>
+            <tr class="bg-gray-50">
+              <td class="py-2 px-4 border">Trans Yağlar & Hazır Gıdalar</td>
+              <td class="py-2 px-4 border">Azaltıcı (hormon üretimini engeller)</td>
+              <td class="py-2 px-4 border">Sağlığı olumsuz etkiler, inflamasyonu artırır</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-pink-600 text-white py-4">
+    <div class="container mx-auto px-4 text-center">
+      <p class="text-sm">&copy; 2025 Kadın Sağlığı Denge Programı. Tüm hakları saklıdır.</p>
+    </div>
+  </footer>
+</body>
+</html>
 </body>
 </html>
