--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-sm-6 col-md-3"><a href="http://besnokta33.com"><img class="img-fluid d-block mx-auto" src="/assets/img/clients/bannerbesnokta.png?h=3f78241183a2f15525992f1d9adf12d8"></a></div>
-                <div class="col-sm-6 col-md-3"><a href="#"><img class="img-fluid d-block mx-auto" src="/assets/img/clients/bannerbesnokta.png?h=3f78241183a2f15525992f1d9adf12d8"></a></div>
+                <div class="col-sm-6 col-md-3"><a href="http://mersinusakademi.com"><img class="img-fluid d-block mx-auto" src="/assets/img/clients/bannerusakademi.png?h=3f78241183a2f15525992f1d9adf12d8"></a></div>
                 <div class="col-sm-6 col-md-3"><a href="#"><img class="img-fluid d-block mx-auto" src="/assets/img/clients/bannerbesnokta.png?h=3f78241183a2f15525992f1d9adf12d8"></a></div>
                 <div class="col-sm-6 col-md-3"><a href="#"><img class="img-fluid d-block mx-auto" src="/assets/img/clients/bannerbesnokta.png?h=3f78241183a2f15525992f1d9adf12d8"></a></div>
             </div>
