--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="MuhammedSka">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="./81029510 (1).png">
+    <link rel="icon" type="image/png" href="./assets/img/8102951031.png">
 
     <!-- Tailwind CSS (Modern Styling) -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -89,7 +89,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
                 <div class="flex-shrink-0 flex items-center gap-3">
-                    <img class="h-10 w-10 rounded-lg hover:rotate-12 transition-transform duration-300" src="./81029510 (1).png" alt="Logo">
+                    <img class="h-10 w-10 rounded-lg hover:rotate-12 transition-transform duration-300" src="./assets/img/8102951031.png" alt="Logo">
                     <span class="font-bold text-xl tracking-wider text-white">Muhammed<span class="text-brand-light">Ska</span></span>
                 </div>
                 <div class="hidden md:block">
@@ -160,7 +160,7 @@
                 <div class="relative w-64 h-64 md:w-80 md:h-80">
                     <div class="absolute inset-0 bg-gradient-to-tr from-brand-dark to-brand-light rounded-full blur-2xl opacity-50"></div>
                     <!-- Using the Logo image as the main visual since no profile pic path is valid -->
-                    <img src="./81029510 (1).png" alt="MuhammedSka" class="relative w-full h-full object-contain drop-shadow-2xl z-10 hover:scale-105 transition-transform duration-500">
+                    <img src="./assets/img/8102951032.png" alt="MuhammedSka" class="relative w-full h-full object-contain drop-shadow-2xl z-10 hover:scale-105 transition-transform duration-500">
                 </div>
             </div>
         </div>
