--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                     <div class="h-48 bg-gray-800 relative overflow-hidden">
                         <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent flex items-end p-6">
                             <div class="bg-blue-600 p-3 rounded-xl shadow-lg">
-                                <i class="fa-solid fa-robot text-2xl text-white"></i>
+                                <img src="./marketplace/im/karakalem.png" alt="KaraKalem Logo" class="w-8 h-8">
                             </div>
                         </div>
                     </div>
