--- a/index.html
+++ b/index.html
@@ -374,9 +374,9 @@
                         </p>
                         
                         <div class="flex gap-3">
-                            <button class="flex-1 bg-white text-black py-3 rounded-xl font-bold hover:bg-gray-200 transition-colors flex items-center justify-center gap-2" download href="./marketplace/karakalem.zip">
+                            <a class="flex-1 bg-white text-black py-3 rounded-xl font-bold hover:bg-gray-200 transition-colors flex items-center justify-center gap-2" download href="./marketplace/karakalem.zip">
                                 <i class="fa-solid fa-download"></i> İndir
-                            </button>
+                            </a>
                             <button class="px-4 py-3 glass rounded-xl text-white hover:bg-white/10 transition-colors" disabled>
                                 <i class="fa-solid fa-link"></i>
                             </button>
