--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@
                 <div class="glass rounded-3xl overflow-hidden border border-white/10 hover:border-brand-DEFAULT/50 transition-all duration-300 group">
                     <div class="h-48 bg-gray-800 relative overflow-hidden">
                         <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent flex items-end p-6">
-                            <div class="bg-blue-600 p-3 rounded-xl shadow-lg">
-                                <img src="./marketplace/im/karakalem.png" alt="KaraKalem Logo" class="w-8 h-8">
+                            <div class=" p-0 rounded-xl shadow-lg">
+                                <img src="./marketplace/im/karakalem.png" alt="KaraKalem Logo" class="w-20 h-20">
                             </div>
                         </div>
                     </div>
